--- a/style.css
+++ b/style.css
@@ -5,19 +5,20 @@ body{
 h1{
     font-size: 50px;
 }
-/* .color{
+.color{
     color: orange;
-} */
+}
 span{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 70px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+    
 }
 .half-width img{
     width: 80%;
@@ -37,4 +38,31 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan) ;
+    border-image-slice: 1;
+}
+#web-dev-experiencei{
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, yellow) ;
+    border-image-slice: 1;
+}
+p{
+    text-align: center;
 }
